--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <p>Radio check. Pilot, please confirm.</p>
    <p>Hey Josh!! It's me ALI!!</p>
    <p>Hey Ali! It was a pleasure working with you.</p>
+   <p>Likewise my friend</p>
 </body>
 </html>
 
